# qualia

./: Cargo.toml
src/: app.rs  context.rs  lib.rs  main.rs  render.rs  session.rs
src/context/: gpu.rs  gui.rs  window.rs
src/render/: control.rs  view.rs
