[package]
name = "qualia"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
burn = "0.19.1"
cpal = "0.17.0"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
rtrb = "0.3.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = "27.0.1"
winit = "0.30.12"
